--- a/src/Soenneker.Queue.Client.csproj
+++ b/src/Soenneker.Queue.Client.csproj
@@ -36,10 +36,12 @@
         <None Include="..\README.md" Pack="true" PackagePath="\" />
         <None Include="..\LICENSE" Pack="true" PackagePath="\" />
         <None Include="..\icon.png" Pack="true" PackagePath="\" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="Azure.Storage.Queues" Version="12.23.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.9" />
         <PackageReference Include="Soenneker.Extensions.Configuration" Version="3.0.721" />
-        <PackageReference Include="Soenneker.Utils.AsyncSingleton" Version="3.0.716" />
         <PackageReference Include="Soenneker.Utils.HttpClientCache" Version="3.0.1744" />
     </ItemGroup>
 </Project>
